# 22CellMorphologyLabelingTool

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: cell_number_selector.py  cell_selector.py  cell_sidebar.py  cell_type_selector.py  center_label_page.py  center_labeller_page.py  database.py  gdrive.py  image.py  label.py  labelled_page.py  labeller.py  labeller_page.py  multipage.py  patient_id_selector.py  project_selector.py  quality.py  quality_labeller_page.py  renderer.py  session.py  sidebar.py
streamlit_custom_image_labeller/: __init__.py
